adds about and navigation
