# src/server/src/api/v1/controllers/sources/index.ts
@@ -1,9 +1,11 @@
-import { SourceAttributes } from './../../../../schema/v1/models/source.model';
-import { Get, Query, Path, Route } from 'tsoa';
-import { Source } from '../../../../schema/v1/models';
+import { Body, Get, Query, Path, Post, Route, Tags } from 'tsoa';
+
+import { ChatGPTService, Prompt, SpiderService } from '../../../../services';
+import { Source, SourceAttributes, SourceCreationAttributes } from '../../../../schema/v1/models';
 import { FindAndCountOptions } from '../../../../schema/v1/models/types';
 
 @Route('/v1/sources')
+@Tags('Sources')
 export class SourceController {
   @Get('/')
   public async getSources(
@@ -61,14 +63,14 @@ export class SourceController {
   }
 
   @Get('/:category/:subcategory/:title')
-  public async getSourcesForCategoryAndSubCategoryAndTitle(
+  public async getSourceForCategoryAndSubCategoryAndTitle(
     @Path() category: string,
     @Path() subcategory: string,
     @Path() title: string,
     @Query() pageSize = 10,
     @Query() page = 0,
     @Query() offset = pageSize * page,
-  ): Promise<SourceAttributes[]> {
+  ): Promise<SourceAttributes> {
     const options: FindAndCountOptions<Source> = {
       limit: pageSize,
       offset: offset,
@@ -79,7 +81,91 @@ export class SourceController {
         title,
       },
     };
-    const sources = await Source.findAndCountAll(options);
-    return sources.rows;
+    const sources = await Source.findOne(options);
+    return sources;
+  }
+
+  @Post('/')
+  public async readAndSummarizeSource(@Body() url: string): Promise<SourceAttributes> {
+    try {
+      // fetch web content with the spider
+      const spider = new SpiderService();
+      const loot = await spider.fetch(url);
+      // create the prompt action map to be sent to chatgpt
+      const sourceInfo = Source.json({
+        url: loot.url,
+        title: loot.title,
+        text: loot.text,
+        filteredText: loot.filteredText,
+      });
+      const prompts: Prompt[] = [
+        {
+          text: loot.filteredText,
+          prefix: `Please give this article a new title relevant to its content no longer than 255 characters`,
+          action: (reply) => (sourceInfo.alternateTitle = reply.text),
+        },
+        {
+          text: loot.filteredText,
+          prefix: [
+            `Please summarize the article using between 300 and 800 words.`,
+            `Please do not use phrases like "the article".`,
+          ].join(' '),
+          action: (reply) => (sourceInfo.abridged = reply.text),
+        },
+        {
+          text: loot.filteredText,
+          prefix: [
+            `Please summarize the article using between 100 and 200 words.`,
+            `Please do not use phrases like "the article".`,
+          ].join(' '),
+          action: (reply) => (sourceInfo.summary = reply.text),
+        },
+        {
+          text: loot.filteredText,
+          prefix: [
+            `Please summarize the article in one sentence.`,
+            `Please do not use phrases like "the article".`,
+          ].join(' '),
+          action: (reply) => (sourceInfo.shortSummary = reply.text),
+        },
+        {
+          text: loot.filteredText,
+          prefix: `Please provide a list of at least 10 tags most relevant to this article separated by commas like: tag 1,tag 2,tag 3,tag 4,tag 5,tag 6,tag 7,tag 8,tag 9,tag 10`,
+          action: (reply) => {
+            sourceInfo.tags = reply.text
+              .replace(/^tags:\s*/i, '')
+              .replace(/\.$/, '')
+              .split(',')
+              .map((tag) => tag.trim());
+          },
+        },
+        {
+          text: loot.filteredText,
+          prefix: `Please provide a one word category for this article`,
+          action: (reply) => (sourceInfo.category = reply.text.replace(/^category:\s*/i, '').replace(/\.$/, '')).trim(),
+        },
+        {
+          text: loot.filteredText,
+          prefix: `Please provide a one word subcategory for this article`,
+          action: (reply) =>
+            (sourceInfo.subcategory = reply.text.replace(/^subcategory:\s*/i, '').replace(/\.$/, '')).trim(),
+        },
+      ];
+      // initialize chatgpt service and send the prompt
+      const chatgpt = new ChatGPTService();
+      // iterate through each source prompt and send them to chatgpt
+      for (const prompt of prompts) {
+        const reply = await chatgpt.send(prompt.text, { promptPrefix: prompt.prefix });
+        console.log(reply);
+        prompt.action(reply);
+      }
+      console.log(sourceInfo);
+      const source = new Source(sourceInfo as SourceCreationAttributes);
+      await source.save();
+      await source.reload();
+      return source;
+    } catch (e) {
+      console.error(e);
+    }
   }
 }
