# src/server/src/api/v1/routes/articles/index.ts
@@ -1,8 +1,10 @@
 import { Router } from 'express';
 import { param } from 'express-validator';
+
 import { pagination, validate } from '../../middleware';
 
-import { Article } from '../../../../schema/v1/models';
+import { ArticleController } from './../../controllers';
+import { ArticleAttributes } from '../../../../schema/v1/models';
 
 const router = Router();
 
@@ -15,22 +17,28 @@ router.get(
   validate,
   async (req, res) => {
     const { category, subcategory, title } = req.params;
-    const { pageSize = 10, offset = 0 } = req.query;
-
-    const options: Record<string, unknown> = {
-      limit: pageSize,
-      offset,
-      order: [['createdAt', 'DESC']],
-    };
-    const filters: Record<string, string> = {};
-    if (title) filters.title = title;
-    if (category) filters.category = category;
-    if (subcategory) filters.subcategory = subcategory;
-    if (Object.keys(filters).length > 0) {
-      options.where = filters;
+    const { pageSize = 10, page = 0, offset = 0 } = req.query;
+    const controller = new ArticleController();
+    let response: ArticleAttributes[] = [];
+    if (category && subcategory && title) {
+      response = [
+        await controller.getArticleForCategoryAndSubcategoryAndTitle(
+          category,
+          subcategory,
+          title,
+          pageSize,
+          page,
+          offset,
+        ),
+      ];
+    } else if (category && subcategory) {
+      response = await controller.getArticlesForCategoryAndSubcategory(category, subcategory, pageSize, page, offset);
+    } else if (category) {
+      response = await controller.getArticlesForCategory(category, pageSize, page, offset);
+    } else {
+      response = await controller.getArticles(pageSize, page, offset);
     }
-    const articles = await Article.findAndCountAll(options);
-    res.json({ data: articles.rows });
+    res.json(response);
   },
 );
 
